apps/base/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - homepage.hirednoobs.com
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
